# NumberCorridor

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  build_deb.sh  snapcraft.yaml
DEBIAN/: control
NumberCorridor/DEBIAN/: control
inc/: array.hpp  game.hpp  game_builder.hpp  generator.h  main.hpp  number_arrays.hpp  numbers.hpp  screens.hpp  terminal.hpp
src/: array.cpp  game.cpp  game_builder.cpp  generator.c  main.cpp  number_arrays.cpp  numbers.cpp  screens.cpp  terminal.cpp
